feat: update total amount
